fixing gap property issue

--- a/Assignment_5/css/style.css
+++ b/Assignment_5/css/style.css
@@ -36,7 +36,7 @@ h2 {
   width: 1200px;
   max-width: 100%;
   margin: 0 auto;
-  /* padding: 0 20px; */
+  padding: 0 20px;
 }
 
 .btn {
@@ -68,7 +68,7 @@ h2 {
   display: flex;
   gap: 20px;
   list-style: none;
-  font-weight: 5 00;
+  font-weight: 500;
 }
 .navLinks li a {
   font-size: 20px;
@@ -132,7 +132,7 @@ img {
 
 .Cards {
   display: flex;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   align-items: center;
   gap: 50px;
 
@@ -201,15 +201,12 @@ letter-spacing: 0px;
 .Features{
   display: flex;
   flex-direction: column;
-  padding:0 20px;
-  
 }
 .Feature{
   display: flex;
  gap:20px;
  
- margin-bottom:20px;
- padding-bottom:20px;
+ padding:20px;  
  border-bottom: 1px solid #E0E0E0;
 }
 
@@ -238,7 +235,7 @@ letter-spacing: 0px;
   font-weight: 400px;
 line-height: 60px;
 letter-spacing: 0px;
-padding: 0 20px;
+
   align-items: center;
 }
 .FeatureImage{
@@ -253,7 +250,6 @@ object-fit:cover;
   display: flex;
   justify-content: space-around;
   cursor: pointer;
-
   margin: 20px 100px;
   align-items: center;
   gap: 30px;
